--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
 <link rel="stylesheet" type="text/css" href="main.css">
 	<title>Student</title>
 </head>
-<body>
-<p>foo bar</p>
-<a href="https://google.com">text</a>
+<body><div>
+  <h1>Sally Student</h1>
+  <p>I'm an aspiring full stack web developer. I love cats, coding, and crocheting.</p>
+  <h2>Skills</h2>
+  <ul>
+    <li>HTML</li>
+    <li>CSS</li>
+    <li>JavaScript</li>
+    <li>jQuery</li>
+  </ul>
+  <h2>Contact Info</h2>
+  <p>Twitter: <a href="https://twitter.com/sallyStudent">@sallyStudent</a></p>
+</div>
 </body>
 </html>
